<resources>
    <string name="app_name">IsItDown</string>
    <string name="enter_host_hint">Enter URL (e.g. https://google.com)</string>
    <string name="start_monitoring">Start Monitoring</string>
    <string name="stop_monitoring">Stop Monitoring</string>
    <string name="clear_logs">Clear Logs</string>
    <string name="status_label">Status: %1$s</string>
    <string name="status_idle">Idle</string>
    <string name="status_running">Monitoring...</string>
    <string name="settings">Settings</string>
    <string name="custom_audio">Custom Alert Audio</string>
    <string name="select_audio">Select Audio File</string>
    <string name="alert_frequency">Beep Repetition</string>
    <string name="freq_once">1 Time</string>
    <string name="freq_twice">2 Times</string>
    <string name="freq_3times">3 Times</string>
    <string name="log_retention">Log Retention</string>
    <string name="retention_24h">24 Hours</string>
    <string name="retention_3d">3 Days</string>
    <string name="retention_1w">1 Week</string>
    <string name="retention_forever">Forever</string>
    <string name="notification_channel_name">Monitor Service</string>
    <string name="notification_title">IsItDown Monitor</string>
    <string name="notification_text">Monitoring %1$s...</string>
    <string name="alert_down_title">Host is DOWN!</string>
    <string name="alert_down_text">%1$s is currently unreachable.</string>
    <string-array name="interval_options">
        <item>Real Time (1s)</item>
        <item>1 Minute</item>
        <item>2 Minutes</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>30 Minutes</item>
    </string-array>
    <integer-array name="interval_values_ms">
        <item>1000</item>
        <item>60000</item>
        <item>120000</item>
        <item>300000</item>
        <item>600000</item>
        <item>1800000</item>
    </integer-array>
</resources>
